# ionis-validate

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: beta-test-report.yml  bug-report.yml  config.yml
src/ionis_validate/: __init__.py  cli.py  model.py  physics_override.py
src/ionis_validate/data/: config_v20.json  example_custom_paths.json  ionis_v20.pth  ionis_v22_gamma_meta.json  solar_daily.csv
src/ionis_validate/tests/: __init__.py  run_adif.py  run_all.py  run_custom.py  run_info.py  run_predict.py  run_report.py  test_ki7mt_override.py  test_tst100_canonical.py  test_tst200_physics.py  test_tst300_input_validation.py  test_tst400_hallucination.py  test_tst500_robustness.py  test_tst600_adversarial.py  test_tst700_bias.py  test_tst800_regression.py  test_tst900_band_time.py
src/ionis_validate/ui/: app.py  pages.py
