[project]
name = "ionis-validate"
version = "4.0.2"
description = "IONIS V22-gamma + PhysicsOverrideLayer — HF Propagation Model Validation Suite"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Greg Beam, KI7MT"}]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "safetensors>=0.4",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
ui = ["nicegui>=2.0", "plotly>=5.0"]

[project.urls]
Homepage = "https://ionis-ai.com/"
Repository = "https://github.com/IONIS-AI/ionis-validate"
Issues = "https://github.com/IONIS-AI/ionis-validate/issues"
Documentation = "https://ionis-ai.com/testing/"

[project.scripts]
ionis-validate = "ionis_validate.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ionis_validate"]
